source/stylesheets/partials/_figure.scss
figure {
  img {
    border-radius: 0.8em;
    width: 100%;
  }
  figcaption {
    font-style: oblique;
    font-weight: medium;
    font-size: 0.8em;
    float: right;
    text-align: right;
    clear: both;
  }
}

aside figure {
  width: 100%;
  text-align: right;
  figcaption {
    float: right;
  }
  img, figcaption {
    width: 75%;
  }
  @media only screen and (max-width: 768px) {
    width: 50%;
    text-align: left;
  }
}

